src/snapshots/snapshots/tui_2048__snapshots__snap__tests__render_app_game_over.snap
---
source: src/snapshots/snap.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2048 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                     Score: 0 | High Score: 0                                     ┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                  ┌Game Over─────────────────────────────────────────────────┐                  │┃"
"┃│                  │You finished with a score of 0                            │                  │┃"
"┃│                  │                                                          │                  │┃"
"┃│                  │                                                          │                  │┃"
"┃└──────────────────│                                                          │──────────────────┘┃"
"┃┌──────────────────│                                                          │──────────────────┐┃"
"┃│                  │                                                          │                  │┃"
"┃│                  └ New Game <n> High Scores <s>  Quit <q> ──────────────────┘                  │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                       ││                                               ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┗━━━━━━━━━━━━━━━━ Move <hjkl or Arrow Keys> New Game <n> High Scores <s>  Quit <q> ━━━━━━━━━━━━━━━━┛"
