src/snapshots/snapshots/tui_2048__snapshots__snap__tests__render_app_game_style_not_chosen.snap
---
source: src/snapshots/snap.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2048 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                           Score: 0 | High Score: 0                           ┃"
"┃┌──────────────────┐┌─────────────────┐┌──────────────────┐┌─────────────────┐┃"
"┃│                  ││                 ││                  ││                 │┃"
"┃│                  ││                 ││                  ││                 │┃"
"┃└──────────────                                                ──────────────┘┃"
"┃┌──────────────                                                ──────────────┐┃"
"┃│                                                                            │┃"
"┃│              ┌Choose your game mode─────────────────────────┐              │┃"
"┃│              │Normal                                        │              │┃"
"┃└──────────────│Timed 5min                                    │──────────────┘┃"
"┃┌──────────────└ Up <k> Down <j>  Select <Enter> ─────────────┘──────────────┐┃"
"┃│                                                                            │┃"
"┃│                                                                            │┃"
"┃└──────────────                                                ──────────────┘┃"
"┃┌──────────────────┐┌─────────────────┐┌──────────────────┐┌─────────────────┐┃"
"┃│                  ││                 ││                  ││                 │┃"
"┃│                  ││                 ││                  ││                 │┃"
"┃└──────────────────┘└─────────────────┘└──────────────────┘└─────────────────┘┃"
"┗━━━━━━ Move <hjkl or Arrow Keys> New Game <n> High Scores <s>  Quit <q> ━━━━━━┛"
