src/snapshots/snapshots/tui_2048__snapshots__snap__tests__render_app_move_right.snap
---
source: src/snapshots/snap.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2048 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                     Score: 0 | High Score: 0                                     ┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││           2          │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││           2          │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┃┌───────────────────────┐┌──────────────────────┐┌───────────────────────┐┌──────────────────────┐┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃│                       ││                      ││                       ││                      │┃"
"┃└───────────────────────┘└──────────────────────┘└───────────────────────┘└──────────────────────┘┃"
"┗━━━━━━━━━━━━━━━━ Move <hjkl or Arrow Keys> New Game <n> High Scores <s>  Quit <q> ━━━━━━━━━━━━━━━━┛"
