src/snapshots/snapshots/tui_2048__snapshots__snap__tests__render_app_scores.snap
---
source: src/snapshots/snap.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2048 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                               Score: 0 | High Score: 0                                               ┃"
"┃┌────────────────────────────┐┌───────────────────────────┐┌────────────────────────────┐┌───────────────────────────┐┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃└────────────────────────────┘└───────────────────────────┘└────────────────────────────┘└───────────────────────────┘┃"
"┃┌────────────────────────────┐┌───────────────────────────┐┌────────────────────────────┐┌───────────────────────────┐┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                                                         ││                           │┃"
"┃│                            ││                                                         ││                           │┃"
"┃│                ┌High Scores───────────────────────────────────────────────────────────────────────┐                │┃"
"┃│                │Date | Score | Highest | Style                                                    │                │┃"
"┃│                │                                                                                  │                │┃"
"┃│                │                                                                                  │                │┃"
"┃│                │                                                                                  │                │┃"
"┃└────────────────│                                                                                  │────────────────┘┃"
"┃┌────────────────│                                                                                  │────────────────┐┃"
"┃│                │                                                                                  │                │┃"
"┃│                │                                                                                  │                │┃"
"┃│                └ Hide Scores <s>  All <a> Normal Mode <n> 5min Mode <f> 10min Mode <t>────────────┘                │┃"
"┃│                            ││                                                         ││                           │┃"
"┃│                            ││                                                         ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃└────────────────────────────┘└───────────────────────────┘└────────────────────────────┘└───────────────────────────┘┃"
"┃┌────────────────────────────┐┌───────────────────────────┐┌────────────────────────────┐┌───────────────────────────┐┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃│                            ││                           ││                            ││                           │┃"
"┃└────────────────────────────┘└───────────────────────────┘└────────────────────────────┘└───────────────────────────┘┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━ Move <hjkl or Arrow Keys> New Game <n> High Scores <s>  Quit <q> ━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
